--- a/src/Weather/Bundle/WeatherBundle/Resources/views/Default/index.html.twig
+++ b/src/Weather/Bundle/WeatherBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,53 @@
-Test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Weather app</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="{{ asset('bootstrap-3.3.5-dist/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ asset('css/custom.css') }}" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-sm-push-3">
+                <form action="" method="get">
+                    <div class="form-group">
+                        <label for="city">City name:</label><br>
+                        <input type="text" name="city" id="city" value="{{ city }}" />
+                    </div>
+                    <button type="submit" class="btn btn-default">Klausti</button>
+                </form>
+                {% if error != false %}
+                    <div class="alert alert-danger" role="alert">{{ error }}</div>
+                {% elseif city %}
+                    <div id="map" data-lat="{{ info.lat }}" data-lon="{{ info.lon }}" data-zoom="12"></div>
+                    <div class="hidden" id="info_window">
+                        <h3>{{ info.name }}</h3>
+                        <div>Weather: {{ info.weather }}</div>
+                        <div>({{ info.description }})</div>
+                        <div>Temperature: {{ info.temp }}{{ info.unit }}</div>
+                        <small>(min: {{ info.temp_min }}{{ info.unit }}, max: {{ info.temp_max }}{{ info.unit }})</small>
+                        <div>Pressure: {{ info.pressure }}</div>
+                        <div>Humidity: {{ info.humidity }}</div>
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+    <script src="{{ asset('https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js') }}"></script>
+    <script src="{{ asset('https://maps.googleapis.com/maps/api/js') }}"></script>
+    <script src="{{ asset('bootstrap-3.3.5-dist/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('js/custom.js') }}"></script>
+</body>
+</html>
